# folder-lock-decrypt-android

./: Cargo.toml  README.md
src/: main.rs
