[package]
name = "folder_lock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
eframe = "0.23.0"
egui = "0.23.0"
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
tinyfiledialogs = "3.9.1"
